# bletvaska.github.io

./: .gitignore  Gemfile  README.md  _config.yml  books.md  credits.md  html5.01.html  html5.html  index.md  js.html  readme.md  talks.md  template.html
2017/11-hradec.kralove/: index.html
2018/: README.md  disco.html  index.md  ossconf-arduino.wrong.html  ossconf-piseme.dobre.bash.skripty.html  ossconf-tipy.pre.pracu.s.latexom.html  ossvikend-pyweek.html  ossvikend-translators.html
2021/06-minecraft.with.python/resources/minecraft/: pyproject.toml
2021/06-minecraft.with.python/resources/minecraft/tests/: test_minecraft.py
2022/11-uvptechnicom/resources/project/: README.md  pyproject.toml
2022/11-uvptechnicom/resources/project/supa/: main.py
2022/11-uvptechnicom/resources/project/supa/templates/: homepage.html
_books/: internet.veci.2021.md  programovanie.v.jazyku.c.2021.md  vyvoj.aplikacii.pre.chytre.zariadenia.2020.md
_includes/: about.mirek.html  countdown.html  custom-head.html  first.slide.html  google-analytics.html  qr.html  qr2.html  sidebar-icon-links.html  sidebar-nav-links.html  talk.html
_layouts/: lecture.html  slide.html
_posts/: 2019-03-20-welcome-to-jekyll.markdown
conferences/: 2018.10.ossvikend-pyweek.html  2018.10.ossvikend-translators.html  2018.disco.html  2018.ossconf-arduino.wrong.html  2018.ossconf-piseme.dobre.bash.skripty.html  2018.ossconf-tipy.pre.pracu.s.latexom.html
html5/: grid.css  grid.html  todolist.html  todolist.js  weather.html  weather.js
html5.101/: boxes.html  index.html
javascript.101/: index.html
(+389 files in other folders)
