[tool.poetry]
name = "minecraft"
version = "0.1.0"
description = ""
authors = ["Miroslav Biňas <miroslav.binas@tuke.sk>"]

[tool.poetry.dependencies]
python = "^3.9"
mcpi = "^1.2.0"
ipython = "^7.23.1"
jupyterlab = "^3.0.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
